2005-06-09  Luc Teirlinck  <teirllm@auburn.edu>

	* window.c (Fselect_window): Adapt call to Fselect_frame.

	* lisp.h: Update EXFUN of Fselect_frame.

	* keyboard.c (command_loop_1): Adapt call to Fselect_frame.

	* frame.c (Fhandle_switch_frame, Fselect_frame): Delete unused arg
	no_enter.
	(Fset_mouse_position, Fset_mouse_pixel_position, Ficonify_frame):
	Adapt to above change.

2005-06-10  Juanma Barranquero  <lekktu@gmail.com>

	* fns.c (Fmemq, Fmaphash): Doc fixes.

2005-06-09  Juanma Barranquero  <lekktu@gmail.com>

	* xfaces.c (Fdisplay_supports_face_attributes_p):
	Fix typo in docstring.

2005-06-08  Steven Tamm  <steventamm@mac.com>

	* unexmacosx.c (copy_data_segment): Copy __la_sym_ptr2 section
	used by gcc4 on intel mac.

2005-06-09  Kim F. Storm  <storm@cua.dk>

	* search.c (Fmatch_data): Add optional RESEAT arg.  Unchain markers
	in REUSE list if non-nil; free them if equal to evaporate.
	(Fset_match_data): Add optional RESEAT arg.  Unchain markers in	LIST
	if non-nil; free them if equal to evaporate.  Use XCAR/XCDR.
	(restore_search_regs): Rename from restore_match_data.  Uses changed.
	(unwind_set_match_data): New function.
	(record_unwind_save_match_data): New function like save-match-data.

	* lisp.h (Fmatch_data, Fset_match_data): Fix EXFUN.
	(record_unwind_save_match_data): Add prototype.
	(restore_search_regs): Rename from restore_match_data.

	* composite.c (compose_chars_in_text):
	* eval.c (do_autoload):
	* macmenu.c (set_frame_menubar):
	* process.c (read_process_output, exec_sentinel):
	* xmenu.c (set_frame_menubar):
	* xdisp.c (prepare_menu_bars, update_menu_bar, update_tool_bar):
	* w32menu.c (set_frame_menubar):
	Use record_unwind_save_match_data.

2005-06-08  Richard M. Stallman  <rms@gnu.org>

	* xdisp.c (get_next_display_element): Alter previous change:
	Distinguish Vshow_nonbreak_escape = t or not t.
	For t, use escape_glyph once again, as before previous change.
	Use space or hyphen for display, instead of the non-ASCII char.