@@ -1,3 +1,9 @@
+2005-06-10  Masatake YAMATO  <jet@gyve.org>
+
+	* xdisp.c (note_mode_line_or_margin_highlight): Call clear_mouse_face
+	when mouse_face is not given.
+	Remove unnecessary tabs.
+
 2005-06-09  Luc Teirlinck  <teirllm@auburn.edu>
 
 	* window.c (Fselect_window): Adapt call to Fselect_frame.
